comecei escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>artigo 001</h2>
-            <p>texto 1</p>
+            <h2>Curso html 5 com css 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores hic illo veniam aspernatur, nesciunt perferendis nobis dolore ut cupiditate nihil ex unde, obcaecati assumenda. Voluptatem deleniti ab vel labore voluptatum.</p>
         </article>
         <article>
-            <h2>artigo 001</h2>
-            <p>texto 1</p>
+            <h2>Curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maxime excepturi, voluptatum soluta officiis adipisci laudantium cumque. Et cupiditate neque odit minus similique recusandae quis temporibus doloribus veniam labore. Accusantium.</p>
         </article>
     </main>
 </body>
