--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <header>
             <h1>Curso Grátis</h1>
+            imagemmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
         </header>
         <article>
             <h2>Curso html 5 com css 3</h2>
